feat: read config

--- a/front/src/app/components/aside/aside.component.html
+++ b/front/src/app/components/aside/aside.component.html
@@ -2,12 +2,12 @@
 	<div class="aside-overlay" *ngIf="isOpen" (click)="close()"></div>
 	<div
 		class="aside-content"
+		[class.position-right]="position === 'right'"
+		[class.position-left]="position === 'left'"
 		[style.transform]="getDragTransform()"
-		[ngStyle]="{
-			'top.px': topOffset,
-			'right.px': position === 'right' ? 0 : 'auto',
-			'left.px': position === 'left' ? 0 : 'auto'
-		}"
+		[style.top.px]="topOffset"
+		[style.right.px]="position === 'right' ? 0 : null"
+		[style.left.px]="position === 'left' ? 0 : null"
 	>
 		<div class="aside-header">
 			<app-icons name="close" class="close-icon" (click)="close()" />
