--- a/front/src/app/components/notification/overlay-notification/overlay-notification.component.html
+++ b/front/src/app/components/notification/overlay-notification/overlay-notification.component.html
@@ -1,5 +1,18 @@
 @if(modal){
-<div id="overlay-modal">
+<div
+	id="overlay-modal"
+	[ngClass]="{
+		'custom-backdrop': modal.component,
+		'default-backdrop': !modal.component
+	}"
+	[style.--backdrop-opacity]="
+		modal.component && modal.backdropOpacity !== undefined
+			? modal.backdropOpacity
+			: modal.component
+			? 0.75
+			: 0.5
+	"
+>
 	<div id="modal-content" #modalContent tabindex="-1">
 		@if(modal.component) {
 		<!-- Renderiza componente personalizado no modal -->
