--- a/front/src/app/components/notification/overlay-notification/overlay-notification.component.scss
+++ b/front/src/app/components/notification/overlay-notification/overlay-notification.component.scss
@@ -11,13 +11,22 @@
 }
 
 #overlay-modal {
-	background: rgba(0, 0, 0, 0.5);
+	--backdrop-opacity: 0.75;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	height: 100%;
 	width: 100%;
 	pointer-events: all;
+
+	&.custom-backdrop {
+		background: rgba(0, 0, 0, var(--backdrop-opacity));
+		backdrop-filter: blur(2px);
+	}
+
+	&.default-backdrop {
+		background: rgba(0, 0, 0, 0.5);
+	}
 
 	#modal-content {
 		background: var(--app-background-color);
