--- a/front/src/app/components/notification/overlay-notification/overlay-notification.component.scss
+++ b/front/src/app/components/notification/overlay-notification/overlay-notification.component.scss
@@ -37,6 +37,11 @@
 		max-width: 500px;
 		width: 100%;
 
+		&.custom-modal {
+			max-width: none;
+			width: fit-content;
+		}
+
 		h1 {
 			text-align: center;
 		}
