--- a/front/src/app/components/inputs/button/button.component.scss
+++ b/front/src/app/components/inputs/button/button.component.scss
@@ -7,6 +7,7 @@ button {
 	border: none;
 	outline: none;
 	justify-content: center;
+	align-items: center;
 	transition: 0.3s;
 	cursor: pointer;
 	font-weight: 500;
