--- a/front/src/app/components/inputs/text-input/text-input.component.html
+++ b/front/src/app/components/inputs/text-input/text-input.component.html
@@ -1,44 +1,46 @@
 <div class="input-container">
-	<div
-		class="input"
+  <div
+    class="input"
 		[ngClass]="{
 			label: isFocused || touched || value,
 			focused: isFocused
 		}"
-	>
-		<app-icons
-			[name]="leftIcon"
-			(click)="onLeftIconClick($event)"
-			*ngIf="leftIcon"
-			[ngClass]="{ clickable: !!leftIconClick }"
-		/>
-		<div class="input-wrapper">
-			<input
-				#input
-				[id]="id"
-				[type]="type"
-				[value]="value"
-				(input)="onInput($event)"
-				(blur)="onBlur(value); isFocused = false"
-				(focus)="isFocused = true"
-			/>
-			<label
-				[for]="id"
-				[ngClass]="{ ative: touched || value, icons: leftIcon }"
-			>
-				{{ placeholder }}
-			</label>
-		</div>
-		<app-icons
-			[ngClass]="{ 'right-icon': rightIcon, clickable: !!rightIconClick }"
-			[name]="rightIcon"
-			(click)="onRightIconClick($event)"
-			*ngIf="rightIcon"
-		/>
-	</div>
-	<div class="error-messages" [style.--error-count]="errorMessages().length">
-		@for (item of errorMessages(); track $index) {
-		<span class="error-message">{{ item }}</span>
-		}
-	</div>
+    >
+    @if (leftIcon) {
+      <app-icons
+        [name]="leftIcon"
+        (click)="onLeftIconClick($event)"
+        [ngClass]="{ clickable: !!leftIconClick }"
+        />
+    }
+    <div class="input-wrapper">
+      <input
+        #input
+        [id]="id"
+        [type]="type"
+        [value]="value"
+        (input)="onInput($event)"
+        (blur)="onBlur(value); isFocused = false"
+        (focus)="isFocused = true"
+        />
+      <label
+        [for]="id"
+        [ngClass]="{ ative: touched || value, icons: leftIcon }"
+        >
+        {{ placeholder }}
+      </label>
+    </div>
+    @if (rightIcon) {
+      <app-icons
+        [ngClass]="{ 'right-icon': rightIcon, clickable: !!rightIconClick }"
+        [name]="rightIcon"
+        (click)="onRightIconClick($event)"
+        />
+    }
+  </div>
+  <div class="error-messages" [style.--error-count]="errorMessages().length">
+    @for (item of errorMessages(); track $index) {
+      <span class="error-message">{{ item }}</span>
+    }
+  </div>
 </div>
