--- a/front/src/app/components/aside/aside.component.html
+++ b/front/src/app/components/aside/aside.component.html
@@ -1,17 +1,19 @@
 <div class="aside-container" [class.open]="isOpen">
-	<div class="aside-overlay" *ngIf="isOpen" (click)="close()"></div>
-	<div
-		class="aside-content"
-		[class.position-right]="position === 'right'"
-		[class.position-left]="position === 'left'"
-		[style.transform]="getDragTransform()"
-		[style.top.px]="topOffset"
-		[style.right.px]="position === 'right' ? 0 : null"
-		[style.left.px]="position === 'left' ? 0 : null"
-	>
-		<div class="aside-header">
-			<app-icons name="close" class="close-icon" (click)="close()" />
-		</div>
-		<ng-content></ng-content>
-	</div>
+  @if (isOpen) {
+    <div class="aside-overlay" (click)="close()"></div>
+  }
+  <div
+    class="aside-content"
+    [class.position-right]="position === 'right'"
+    [class.position-left]="position === 'left'"
+    [style.transform]="getDragTransform()"
+    [style.top.px]="topOffset"
+    [style.right.px]="position === 'right' ? 0 : null"
+    [style.left.px]="position === 'left' ? 0 : null"
+    >
+    <div class="aside-header">
+      <app-icons name="close" class="close-icon" (click)="close()" />
+    </div>
+    <ng-content></ng-content>
+  </div>
 </div>
