--- a/front/src/app/components/inputs/select/select.component.html
+++ b/front/src/app/components/inputs/select/select.component.html
@@ -1,28 +1,33 @@
 <div
-	class="custom-select"
-	[class.disabled]="isDisabled"
-	[class.is-open]="isOpen"
->
-	<div class="overlay" *ngIf="isOpen" (click)="closeDropdown()"></div>
+  class="custom-select"
+  [class.disabled]="isDisabled"
+  [class.is-open]="isOpen"
+  >
+  @if (isOpen) {
+    <div class="overlay" (click)="closeDropdown()"></div>
+  }
 
-	<div
-		class="select-trigger"
-		(click)="toggleDropdown()"
-		[class.open]="isOpen"
-		[class.has-value]="value"
-	>
-		<span class="selected-value">{{ getSelectedLabel() }}</span>
-		<span class="arrow" [class.rotate]="isOpen">▼</span>
-	</div>
+  <div
+    class="select-trigger"
+    (click)="toggleDropdown()"
+    [class.open]="isOpen"
+    [class.has-value]="value"
+    >
+    <span class="selected-value">{{ getSelectedLabel() }}</span>
+    <span class="arrow" [class.rotate]="isOpen">▼</span>
+  </div>
 
-	<div class="select-dropdown" *ngIf="isOpen">
-		<div
-			class="select-option"
-			*ngFor="let option of options"
-			(click)="selectOption(option)"
-			[class.selected]="option.value === value"
-		>
-			{{ option.label }}
-		</div>
-	</div>
+  @if (isOpen) {
+    <div class="select-dropdown">
+      @for (option of options; track option) {
+        <div
+          class="select-option"
+          (click)="selectOption(option)"
+          [class.selected]="option.value === value"
+          >
+          {{ option.label }}
+        </div>
+      }
+    </div>
+  }
 </div>
