--- a/front/src/app/components/theme-toggle/theme-toggle.component.html
+++ b/front/src/app/components/theme-toggle/theme-toggle.component.html
@@ -1,12 +1,14 @@
 <div (click)="toggleTheme()">
-	<app-icons
-		*ngIf="themeService.currentTheme() === 'dark'"
-		name="moon"
-		size="32"
-	/>
-	<app-icons
-		*ngIf="themeService.currentTheme() === 'light'"
-		name="sun"
-		size="32"
-	/>
+  @if (themeService.currentTheme() === 'dark') {
+    <app-icons
+      name="moon"
+      size="32"
+      />
+  }
+  @if (themeService.currentTheme() === 'light') {
+    <app-icons
+      name="sun"
+      size="32"
+      />
+  }
 </div>
