--- a/front/src/app/components/icons/icons.component.scss
+++ b/front/src/app/components/icons/icons.component.scss
@@ -1,9 +1,32 @@
 :host {
-	display: inline-block;
-}
-
-div {
-	display: flex;
+	display: inline-flex;
 	align-items: center;
 	justify-content: center;
+	width: var(--icon-size);
+	height: var(--icon-size);
+}
+
+.icon-container {
+	display: flex;
+	width: 100%;
+	height: 100%;
+}
+
+::ng-deep .icon-container svg {
+	width: 100% !important;
+	height: 100% !important;
+}
+
+::ng-deep .icon-container {
+	path,
+	circle,
+	rect,
+	line,
+	polygon,
+	polyline,
+	ellipse {
+		color: var(--icon-fill);
+		stroke-width: var(--icon-stroke-width, inherit);
+		stroke: var(--icon-stroke, none);
+	}
 }
