--- a/front/src/app/pages/auth/outlet/outlet.component.html
+++ b/front/src/app/pages/auth/outlet/outlet.component.html
@@ -2,7 +2,7 @@
 	<a [routerLink]="['/']">
 		<app-icons name="arrow-left" size="36" />
 	</a>
-	<app-icons name="logo" size="72" [modifier]="false" />
+	<app-icons name="logo" size="72" />
 	<app-theme-toggle />
 </header>
 <main>
