--- a/front/src/app/pages/book/book.component.html
+++ b/front/src/app/pages/book/book.component.html
@@ -36,7 +36,7 @@
 		<p class="book-description">{{ book.description }}</p>
 	</div>
 </div>
-<app-info-book [id]="book.id" />
+<app-info-book [id]="book.id" [bookBasic]="book" />
 } @placeholder {
 <div class="book-background placeholder-background"></div>
 <div class="book">
