--- a/front/src/app/components/select/select.component.scss
+++ b/front/src/app/components/select/select.component.scss
@@ -5,6 +5,11 @@
 	border-radius: 15px;
 	border: 4px solid var(--primary-color);
 	cursor: pointer;
+    
+    &.disabled {
+        opacity: 0.5;
+        cursor: not-allowed;
+    }
 }
 
 .icon {
