feat: implement offline support for books and chapters, including network guard and improved error handling

--- a/front/src/app/pages/book/book.component.html
+++ b/front/src/app/pages/book/book.component.html
@@ -67,7 +67,7 @@
 	<div class="placeholder"></div>
 	}
 </div>
-} @if(admin){
+} @if(admin && book){
 <app-aside>
 	<h1><app-icons name="book" /> {{ book.title }}</h1>
 	<div class="line"></div>
