--- a/front/src/app/components/info-book/info-book.component.html
+++ b/front/src/app/components/info-book/info-book.component.html
@@ -11,6 +11,15 @@
 		class="container"
 	>
 		@defer (when modulesLoad[tab.chapters].load()) {
+		<div class="controls">
+			<app-button (click)="toggleSort()" variant="text">
+				<span>Ordem {{ sortAscending() ? 'Crescente' : 'Decrescente' }}</span>
+				<app-icons
+					name="arrow-up"
+					[class.rotated]="!sortAscending()"
+				/>
+			</app-button>
+		</div>
 		<div class="scrollable">
 			@for(chapter of chapters; track chapter.id) {
 			<a [routerLink]="[chapter.id]" class="chapter">
@@ -27,13 +36,29 @@
 							[class.read]="chapter.read"
 						/>
 					</div>
-					<div class="download-container" (click)="$event.preventDefault(); $event.stopPropagation()">
-						@if(chaptersDownloadStatus.get(chapter.id) === 'downloaded') {
-							<app-icons name="check" class="icon-downloaded" />
-						} @else if (chaptersDownloadStatus.get(chapter.id) === 'downloading') {
-							<span class="download-progress">{{ chaptersDownloadProgress.get(chapter.id) | number:'1.0-0' }}%</span>
+					<div
+						class="download-container"
+						(click)="
+							$event.preventDefault(); $event.stopPropagation()
+						"
+					>
+						@if(chaptersDownloadStatus.get(chapter.id) ===
+						'downloaded') {
+						<app-icons name="check" class="icon-downloaded" />
+						} @else if (chaptersDownloadStatus.get(chapter.id) ===
+						'downloading') {
+						<span class="download-progress"
+							>{{
+								chaptersDownloadProgress.get(chapter.id)
+									| number : '1.0-0'
+							}}%</span
+						>
 						} @else {
-							<app-icons name="download" class="icon-download" (click)="downloadChapter(chapter, $event)"/>
+						<app-icons
+							name="download"
+							class="icon-download"
+							(click)="downloadChapter(chapter, $event)"
+						/>
 						}
 					</div>
 					<div
