--- a/front/src/app/pages/book/book.component.html
+++ b/front/src/app/pages/book/book.component.html
@@ -20,6 +20,38 @@
 			<div class="bottom">
 				<div class="caps">{{ book.totalChapters }} Capitulos</div>
 				<div class="release">Lançamento {{ book.publication }}</div>
+				<div class="actions">
+					<app-button (click)="continueReading()" variant="primary">
+						{{
+							lastReadChapterId
+								? 'Continue lendo'
+								: 'Começar a ler'
+						}}
+					</app-button>
+					<div class="options-wrapper">
+						<button
+							class="options-btn"
+							(click)="
+								toggleOptionsDropdown();
+								$event.stopPropagation()
+							"
+						>
+							<app-icons name="more" />
+						</button>
+						@if (showOptionsDropdown()) {
+						<div class="options-dropdown">
+							<button (click)="downloadBook()">
+								<app-icons name="download" />
+								<span>Baixar livro</span>
+							</button>
+							<button (click)="shareBook()">
+								<app-icons name="share" />
+								<span>Compartilhar</span>
+							</button>
+						</div>
+						}
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
